--- a/HumanPop/Views/Home/Index.cshtml
+++ b/HumanPop/Views/Home/Index.cshtml
@@ -1,10 +1,12 @@
 ﻿<!DOCTYPE html>
+
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
     <script type="text/javascript">
         constants = {
-            getPage: '@Url.RouteUrl("DefaultApi", new {controller = "Blog", action = "page" })'
+            page: '@Url.RouteUrl("DefaultApi", new {controller = "Human", action = "page" })'
+            human: '@Url.RouteUrl("DefaultApi", new { controller = "Human", action = "human" })'
         }
     </script>
     <title>Index</title>
