First middleware. Bruh

--- a/HumanPop/Views/Home/Index.cshtml
+++ b/HumanPop/Views/Home/Index.cshtml
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width" />
     <script type="text/javascript">
         constants = {
-            page: '@Url.RouteUrl("DefaultApi", new {controller = "Human", action = "page" })'
-            human: '@Url.RouteUrl("DefaultApi", new { controller = "Human", action = "human" })'
+            page: '@Url.RouteUrl("DefaultApi", new {controller = "Human", action = "page" })',
+            human: '@Url.RouteUrl("DefaultApi", new { controller = "Human", action = "human" })',
         }
     </script>
     <title>Index</title>
