Start identitty front

--- a/HumanPop/Views/Home/Index.cshtml
+++ b/HumanPop/Views/Home/Index.cshtml
@@ -7,6 +7,8 @@
         constants = {
             page: '@Url.RouteUrl("DefaultApi", new {controller = "Human", action = "page" })',
             human: '@Url.RouteUrl("DefaultApi", new { controller = "Human", action = "human" })',
+            token: '@Url.RouteUrl("DefaultApi", new {controller = "Identity", action = "token" })',
+            tokenKey: 'tokenKey'
         }
     </script>
     <title>Index</title>
