--- a/HumanPop/Views/Home/Index.cshtml
+++ b/HumanPop/Views/Home/Index.cshtml
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width" />
     <script type="text/javascript">
         constants = {
-            page: '@Url.RouteUrl("DefaultApi", new {controller = "Human", action = "page" })',
+            page: '@Url.RouteUrl("DefaultApi", new { controller = "Human", action = "page" })',
             human: '@Url.RouteUrl("DefaultApi", new { controller = "Human", action = "human" })',
-            token: '@Url.RouteUrl("DefaultApi", new {controller = "Identity", action = "token" })',
+            token: '@Url.RouteUrl("DefaultApi", new { controller = "Identity", action = "token" })',
+            register: '@Url.RouteUrl("DefaultApi", new { controller = "Identity", action = "register" })',
             tokenKey: 'tokenKey'
         }
     </script>
